Bug 99310 - Data validity cell range dropdown list not working
Summary: Data validity cell range dropdown list not working
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-04-14 21:00 UTC by Robert Gonzalez MX
Modified: 2016-10-25 18:54 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Validity test file (10.27 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-04-14 21:00 UTC, Robert Gonzalez MX
Details
Descriptions and screenshoots (67.84 KB, application/vnd.oasis.opendocument.text)
2016-04-14 21:01 UTC, Robert Gonzalez MX
Details
validity test screenshoot (41.57 KB, image/png)
2016-04-15 12:36 UTC, Robert Gonzalez MX
Details
Screenshot 5.2 (16.05 KB, image/png)
2016-04-15 23:20 UTC, m_a_riosv
Details
2016 04 15 screenshot (75.19 KB, image/png)
2016-04-18 03:18 UTC, Robert Gonzalez MX
Details
2016 06 04 screenshot (97.94 KB, image/png)
2016-06-05 01:08 UTC, Robert Gonzalez MX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Gonzalez MX 2016-04-14 21:00:05 UTC
In LO Calc 5.2.0 aplha0 the Data validity cell range feature doesn’t work, once the validity is set, it doesn’t display the options in the drop down selection list.

In version 5.1.2.2 works fine.

Steps to reproduce.
Create a new Calc file
create a new list of 10 text options in A2 thru A11 in sheet1
select or add sheet2
select a range of 10 rows, like A2:A11
from the menu select Data-Validity 
in the Allow field select “cell range”
in the Source field add $sheet1.$A$2:$A$11
click OK

Go to A2 in sheet2 and open the drop down list and is empty

Save file and open it with LO Calc 5.1.2.2 and the validity works ok.

See attached test file.

Tested in Windows XP SP3 and Windows 10.

Version: 5.2.0.0.alpha0+
Build ID: 157469896ef56720f33676222b95e81c04ab5c72
CPU Threads: 2; OS Version: Windows 5.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-04-06_20:10:15
Locale: es-MX (es_MX)

and 

Version: 5.1.2.2
Build ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
CPU Threads: 2; OS Version: Windows 5.1; UI Render: default; 
Locale: es-MX (es_MX)
Comment 1 Robert Gonzalez MX 2016-04-14 21:00:53 UTC
Created attachment 124346 [details]
Validity test file
Comment 2 Robert Gonzalez MX 2016-04-14 21:01:30 UTC
Created attachment 124347 [details]
Descriptions and screenshoots
Comment 3 GerardF 2016-04-15 09:04:13 UTC
Works fine for me with (a bit) older version:
Version: 5.2.0.0.alpha0+
Build ID: db1ee6571d82bca1763de71c11dd67993ec01df7
CPU Threads: 2; OS Version: Windows 6.0; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-03-21_08:04:11
Locale: fr-FR (fr_FR)
Comment 4 raal 2016-04-15 10:25:02 UTC
I can confirm with  Version: 5.2.0.0.alpha0+; win7
Comment 5 Julien Nabet 2016-04-15 10:51:44 UTC
On pc Debian x86-64 with master sources updated yesterday, I don't reproduce this.
I tested with SAL_USE_VCLPLUGIN=gtk, gtk3 and gen
Comment 6 Robert Gonzalez MX 2016-04-15 12:35:59 UTC
just tested it with Version: 5.2.0.0.alpha0+
Build ID: 92d7fef02574051826e46a3a7e3d33a1afa062d7
CPU Threads: 8; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-04-14_03:18:53
Locale: es-MX (es_MX)
On Windows 10

and i can reproduce it

attaching screenshoot
Comment 7 Robert Gonzalez MX 2016-04-15 12:36:46 UTC
Created attachment 124361 [details]
validity test screenshoot
Comment 8 m_a_riosv 2016-04-15 23:20:39 UTC
Created attachment 124377 [details]
Screenshot 5.2

I can't reproduce.
Win10x64
Version: 5.2.0.0.alpha0+
Build ID: ef34535ceb60d7d63b8d8671e4c6e9e43ffbd17d
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-03-27_09:52:41
Comment 9 Robert Gonzalez MX 2016-04-18 03:17:02 UTC
Tested with Version: 5.2.0.0.alpha0+
Build ID: d6bf3bcd8b51012d55a2ec962800a8549e2b85e1
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-04-15_06:46:09
Locale: es-MX (es_MX)

Reproducible

adding screenshoot
Comment 10 Robert Gonzalez MX 2016-04-18 03:18:09 UTC
Created attachment 124441 [details]
2016 04 15 screenshot
Comment 11 raal 2016-05-18 10:29:18 UTC
note:unable to bibisect with /bibisect-win32-5.2 - tens of skipped commits
Comment 12 Daveo 2016-05-22 10:42:09 UTC
Confirmed: For new and existing files
Windows 7 Ult x64
LO Version: 5.2.0.0.alpha1 (x64)
Build ID: 902b28a39528b6c92602e9b521a1d0861be1caf9
CPU Threads: 8; OS Version: Windows 6.1; UI Render: default;

Validity test file functions as expected in Version: 5.1.3.2 (x64)
Build ID: 644e4637d1d8544fd9f56425bd6cec110e49301b
CPU Threads: 8; OS Version: Windows 6.1; UI Render: default;
Comment 13 Robert Gonzalez MX 2016-06-05 01:08:04 UTC
Tested and reproduced with Version: 5.2.0.0.beta1
Build ID: 1e9933ef611c66bcded94b84052543c78cf1c223
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
Locale: es-MX (es_MX)

adding screenshot
Comment 14 Robert Gonzalez MX 2016-06-05 01:08:52 UTC
Created attachment 125490 [details]
2016 06 04 screenshot
Comment 15 m_a_riosv 2016-06-05 11:06:14 UTC
Reproducible now.

Win10x64
Version: 5.2.0.0.beta1
Build ID: 1e9933ef611c66bcded94b84052543c78cf1c223
CPU Threads: 4; OS Version: Windows 6.2; UI Render: GL; 
Version: 5.3.0.0.alpha0+ (x64)
Build ID: b2abb97a6545096d6952430f7ff37cadb1a23707
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2016-06-04_00:22:16

Change OpenGL or OpenCL doesn't solve the issue.

Works with:
Version: 5.1.4.1 (x64)
Build ID: a4d48e4ff0e9f93e78b6356ca7b0b6303e360356
CPU Threads: 1; OS Version: Windows 6.19; UI Render: GL;
Comment 16 Robert Gonzalez MX 2016-06-08 15:43:04 UTC
Good day.

I just tested this bug in Version: 5.2.0.0.beta1
Build ID: 1e9933ef611c66bcded94b84052543c78cf1c223
CPU Threads: 8; OS Version: Linux 4.1; UI Render: default; 
Locale: es-MX (es_MX.UTF-8)
OpenSUSE Leap 
And works OK. Only in Windows doesn't work.
Comment 17 Caolán McNamara 2016-06-19 16:39:22 UTC
sc/source/ui/view/gridwin.cxx

void ScFilterListBox::LoseFocus()
{
#ifndef UNX
    Hide();
#endif
    vcl::Window::LoseFocus();
}


has an odd

#ifndef UNX
    Hide()
#endif

block in it since the initial import. I can't see why that is there like so ?
Comment 18 Commit Notification 2016-06-19 16:46:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c3a5012c5a9699040698505d3e34672382c026b8

Related: tdf#99310 data validity cell range dropdown empty under windows

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Caolán McNamara 2016-06-19 16:47:32 UTC
If someone can test a windows build that includes the above speculative fix and report if it works then that would be much appreciated
Comment 20 m_a_riosv 2016-06-20 01:13:16 UTC
Fixed with:
Win10x64
Version: 5.3.0.0.alpha0+
Build ID: b81a1f0aa7efa6c47d03afb7a68c7ad38d506b17
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-06-20_00:24:36
Comment 21 Commit Notification 2016-06-20 08:08:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5bbee0969965b2f92288d87c48aaa4b1d95af569&h=libreoffice-5-2

Resolves: tdf#99310 data validity cell range dropdown empty under windows

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Caolán McNamara 2016-06-21 11:37:29 UTC
Closing, because of 

Fixed with:
Win10x64
Version: 5.3.0.0.alpha0+
Build ID: b81a1f0aa7efa6c47d03afb7a68c7ad38d506b17

Is there a remaining problem with keyboard focus or anything like that ?, where windows is differing from Linux. If so I'd appreciate a new bug to track that
Comment 23 Robert Gonzalez MX 2016-06-22 04:36:22 UTC
Thank you all

I tested it with Version: 5.3.0.0.alpha0+
Build ID: 0c1767d9466adf0729eb8e1f43ddb80a31886898
CPU Threads: 8; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-06-21_01:16:33
Locale: es-MX (es_MX)on Windows 10

and is working again properly.
Comment 24 Niklas Johansson 2016-06-23 12:01:31 UTC
(In reply to Caolán McNamara from comment #22)
...
> Is there a remaining problem with keyboard focus or anything like that ?,
> where windows is differing from Linux. If so I'd appreciate a new bug to
> track that

No more focus issue in 5.2 rc1 on Windows. So no new bug needed. 

Thank you for the fix.