Related: tdf#99310 data validity cell range dropdown empty under windows

if I make this block unconditional then it also disappears under Linux
so I speculate that this is why its missing under Windows.

I can't see why this is the way it is (since initial import in 2000),

This is reportedly a problem since

commit dd46727b99d4bb5135451aa7e5e1bdb197373843
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Apr 5 15:27:38 2016 +0100

    Resolves; tdf#87120 no keyboard navigation inside floating windows

Change-Id: I6159d419bccef851c8f9e965d063882173d91620