sc/source/ui/view/gridwin.cxx
@@ -284,9 +284,6 @@ void ScFilterListBox::EndInit()
 
 void ScFilterListBox::LoseFocus()
 {
-#ifndef UNX
-    Hide();
-#endif
     vcl::Window::LoseFocus();
 }
 
